# bitcointee

./: .eslintignore  .eslintrc.js  .gitignore  README.md  build.gradle  connect-device.sh  gradle.properties  settings.gradle  setup-plugdev-perm.sh
app/: build.gradle
app/jni/: Cargo.toml
app/jni/bitcoin/: Cargo.toml
app/jni/ethereum/: Cargo.toml
app/jni/file_logger/: Cargo.toml
app/jni/src/: lib.rs
app/jni/wiring/: Cargo.toml  README.md
app/src/main/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
ethereum/: README.md  package.json  pnpm-lock.yaml
ethereum/contracts/: Verify.sol
ethereum/test/: Verify.js
ethereum/test/samples/: proof.json
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/android_java_entry/: Cargo.toml  README.md
rust/android_java_entry/src/: call_core.rs  call_rust.rs  handle_java_exceptions.rs  jni_on_load.rs  lib.rs  mod.rs  rust_java_log.rs
rust/ethereum/src/: lib.rs
rust/file_logger/src/: errors.rs  file_logger.rs  lib.rs
rust/java_entry/: Cargo.toml
rust/java_entry/src/: lib.rs
rust/java_entry/src/android/: call_core.rs  constants.rs  error.rs  handle_java_exceptions.rs  mod.rs  rust_java_log.rs  type_aliases.rs
server/: .gitignore  blocks.json  config.json  eslint.config.mjs  example-config.json  index.js  package.json  pnpm-lock.yaml  test.js
server/lib/: adb-utils.js  ajv-utils.js  app-utils.js  crypto-utils.js  errors.js  express-app.js  get-blocks-bitcoin.js  get-blocks.js  get-logger.js  get-ws-instance.js  jsonrpc-mapping.js  jsonrpc-utils.js  ramda-utils.js  setup-exit-listeners.js  sleep.js  ws-instance.js
server/lib/schemas/: config.js  index.js  keys.js  proof.js  (+2 more)
server/test/: jest.setup.js
(+52 files in other folders)
