[workspace]
resolver = "2"

members = [
    "file_logger", "android_java_entry", "bitcoin", "ethereum",
]

[workspace.dependencies]
hex = "0.4.3"
log = "0.4.14"
thiserror = "1.0.40"
quick-error = "2.0.1"
lazy_static = "1.4.0"
serde_json = "1.0.68"
derive_more = "0.99.16"
derive-getters = "0.3.0"
serde = { version = "1.0.130", features = ["derive"] }
